[build-system]
requires = [
    "setuptools >= 64",
    "setuptools_scm >= 6.4"
]
build-backend = "setuptools.build_meta"

[project]
name = "asphalt-sqlalchemy"
description = "SQLAlchemy integration component for the Asphalt framework"
readme = "README.rst"
authors = [{name = "Alex Grönholm", email = "alex.gronholm@nextday.fi"}]
license = {text = "Apache License 2.0"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Database",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "asphalt ~= 4.9",
    "SQLAlchemy[asyncio] >= 2.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/asphalt-framework/asphalt-sqlalchemy"

[project.optional-dependencies]
test = [
    "aiosqlite",
    "anyio >= 4.2",
    "asyncmy; platform_python_implementation == 'CPython'",
    "asyncpg; platform_python_implementation == 'CPython'",
    "coverage >= 7",
    "pymysql",
    "psycopg >= 3.1; platform_python_implementation == 'CPython'",
    "pytest >= 7.4",
    "pytest-lazy-fixture",
]
doc = [
    "Sphinx >= 7.0",
    "sphinx_rtd_theme >= 1.3.0",
    "sphinx-autodoc-typehints >= 1.22",
    "sphinx-tabs >= 3.3.1",
]

[project.entry-points."asphalt.components"]
sqlalchemy = "asphalt.sqlalchemy.component:SQLAlchemyComponent"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"

[tool.ruff]
select = [
    "ASYNC",        # flake8-async
    "E", "F", "W",  # default Flake8
    "G",            # flake8-logging-format
    "I",            # isort
    "ISC",          # flake8-implicit-str-concat
    "PGH",          # pygrep-hooks
    "RUF100",       # unused noqa (yesqa)
    "UP",           # pyupgrade
]

[tool.ruff.isort]
known-first-party = ["asphalt.sqlalchemy"]

[tool.pytest.ini_options]
addopts = "-rsx --tb=short"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.7"

[tool.coverage.run]
source = ["asphalt.sqlalchemy"]
relative_files = true
branch = true

[tool.coverage.report]
show_missing = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38, py39, py310, py311, py312, pypy3
skip_missing_interpreters = true
minversion = 4.0

[testenv]
extras = test
commands = python -m pytest {posargs}
setenv =
  MYSQL_URL = mysql+pymysql://root@localhost:33060/asphalttest
  POSTGRESQL_URL = postgresql+psycopg://postgres:secret@localhost:54320/asphalttest

[testenv:docs]
extras = doc
commands = sphinx-build -W docs build/sphinx
"""
