[metadata]
name = asphalt-sqlalchemy
description = SQLAlchemy integration component for the Asphalt framework
long_description = file: README.rst
author = Alex Grönholm
author_email = alex.gronholm@nextday.fi
url = https://github.com/asphalt-framework/asphalt-sqlalchemy
license = Apache License 2.0
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Topic :: Database
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir=
    = src
packages = find_namespace:
python_requires = >=3.7
install_requires =
    asphalt ~= 4.6.0
    SQLAlchemy >= 1.0.10
    typeguard ~= 2.0

[options.packages.find]
where = src
include = asphalt.*

[options.extras_require]
test =
    pymysql
    psycopg2cffi
    pytest
    pytest-cov
    pytest-asyncio
doc =
    Sphinx >= 1.5
    sphinx_rtd_theme
    sphinx-autodoc-typehints >= 1.2.0
    sphinxcontrib-asyncio >= 0.2.0

[options.entry_points]
asphalt.components =
    sqlalchemy = asphalt.sqlalchemy.component:SQLAlchemyComponent
